--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-PORT = 5000
-MONGO_URI = 'mongodb+srv://abhinav:vBUd05ic5hJaCq8F@cluster0.8oneywc.mongodb.net/?retryWrites=true&w=majority'
-NODE_ENV = 'development'
+PORT = 
+MONGO_URI =
+NODE_ENV = 
